syntax = "proto3";

package proto.v1;

message GetTestResponse {
    string message = 1;
}

message GetTestRequest {
    string id = 1;
}

message UpdateTestResponse {
    string message = 1;
}

message UpdateTestRequest {
    string id = 1;
    string name = 2;
}

service TestService {
    rpc GetTest(GetTestRequest) returns (GetTestResponse);
    rpc UpdateTest(UpdateTestRequest) returns (UpdateTestResponse);
}
